Text example now resized to fit entered number
Also added some documentation

--- a/PoC/typographie/index.html
+++ b/PoC/typographie/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
 
-    <form class="" onSubmit="calc()">
+    <form class="" action="#" onSubmit="calc()">
       <p>Verdana</p>
       <input type="text" name="font-size" id="font-size" value="12">
       <button type="submit" name="button">Los</button>
