Basic PoC working

--- a/PoC/typographie/index.html
+++ b/PoC/typographie/index.html
@@ -15,10 +15,24 @@
 
     <p id="ws" class="max-width">
     wwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwww
-  </p>
+    </p>
     <p id="is" class="max-width">
     iiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiii
-  </p>
+    </p>
+
+    <div id="styled-text">
+      <h1>Proident mlkshk ut affogato</h1>
+      <p>Assumenda single-origin coffee mustache, wolf cillum YOLO deep v gochujang marfa pitchfork heirloom drinking vinegar church-key keytar. Taxidermy squid actually qui, ramps microdosing chartreuse sed officia tumblr. Id literally laborum meditation, delectus tote bag next level paleo ramps flexitarian. Franzen est banjo irony waistcoat leggings duis, truffaut marfa vero aesthetic pork belly photo booth. </p>
+      <p>Lo-fi schlitz 3 wolf moon, pop-up chia heirloom portland. Fap quis non sriracha, aute bushwick pork belly XOXO sustainable bicycle rights shoreditch freegan bespoke gluten-free VHS. Nihil butcher green juice you probably haven't heard of them, quis veniam ex excepteur.</p>
+
+      <h2>Raw denim semiotics humblebrag austin</h2>
+      <p>Tempor voluptate occupy fugiat, affogato 3 wolf moon brunch normcore portland yuccie. Migas cray direct trade, raw denim slow-carb scenester roof party fashion axe gentrify labore ut brunch poutine. Gentrify try-hard irony humblebrag. Everyday carry magna meh, tempor literally heirloom shoreditch.</p>
+      <p>Magna velit odio ut, +1 ea salvia vegan seitan. Direct trade 8-bit slow-carb ethical commodo. Assumenda williamsburg seitan, elit authentic austin esse tousled stumptown PBRB freegan migas celiac cold-pressed lumbersexual.</p>
+
+      <h3>YOLO skateboard hashtag kinfolk anim</h3>
+      <p>Id excepteur adipisicing veniam, nihil sriracha do DIY irony. Cronut trust fund poutine lumbersexual, green juice austin normcore church-key four dollar toast. Tempor man bun labore pop-up actually, taxidermy adipisicing chillwave laborum tote bag wayfarers paleo cliche vegan affogato.</p>
+      <p>Pinterest ugh commodo truffaut delectus. Locavore marfa stumptown, pour-over thundercats schlitz affogato irony synth proident pabst elit. Cillum shoreditch dolor, kickstarter bushwick shabby chic et. Magna flannel yr keffiyeh excepteur, fap keytar.</p>
+    </div>
 
     <script type="text/javascript" src="scripts/calculate.js">
 
