Moved text used for calculations off view
text is absolutely placed -9999px off top since `display:none` broke the
calculation.

Closes #8

--- a/PoC/typographie/index.html
+++ b/PoC/typographie/index.html
@@ -13,10 +13,10 @@
       <button type="submit" name="button">Los</button>
     </form>
 
-    <p id="ws" class="max-width">
+    <p id="ws" class="max-width calc-text">
     wwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwww
     </p>
-    <p id="is" class="max-width">
+    <p id="is" class="max-width calc-text">
     iiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiii
     </p>
 
