Added visual feedback for contrast
Notifies the user which level of contrast was matched as devined in WCAG
2.0.

Closes #18

--- a/PoC/typographie/index.html
+++ b/PoC/typographie/index.html
@@ -16,13 +16,23 @@
       <button type="submit" name="button">Los</button>
     </form>
 
-    <h3>Hintergrundfarbe auswählen:</h2>
-    <input id="bg-color" />
-    <p id="display-bg-color">#ffffff</p>
+    <div class="colors clearfix">
+      <div class="color-inputs">
+        <h3>Hintergrundfarbe auswählen:</h2>
+        <input id="bg-color" />
+        <p id="display-bg-color">#ffffff</p>
 
-    <h3>Vordergrundfarbe auswählen:</h2>
-    <input id="fg-color" />
-    <p id="display-fg-color">#000000</p>
+        <h3>Vordergrundfarbe auswählen:</h2>
+        <input id="fg-color" />
+        <p id="display-fg-color">#000000</p>
+      </div>
+      <div class="wcag-acceptance">
+        <p id="wcga-a" class="checkmark">WCGA 2.0 A</p>
+        <p id="wcga-aa" class="checkmark">WCGA 2.0 AA</p>
+        <p id="wcga-aaa" class="checkmark">WCGA 2.0 AAA</p>
+      </div>
+
+    </div>
 
     <p id="ws" class="max-width calc-text">
     wwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwww
