--- a/PoC/typographie/index.html
+++ b/PoC/typographie/index.html
@@ -10,11 +10,9 @@
   </head>
   <body>
 
-    <form class="" action="#" onSubmit="calc()">
       <p>Verdana</p>
       <input type="text" name="font-size" id="font-size" value="12">
-      <button type="submit" name="button">Los</button>
-    </form>
+      <button id="btn-text-size" type="submit" name="button">Los</button>
 
     <div class="colors clearfix">
       <div class="color-inputs">
