Calculated values are now displayed
Closes #9

--- a/PoC/typographie/index.html
+++ b/PoC/typographie/index.html
@@ -53,6 +53,15 @@
     iiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiii
     </p>
 
+    <div id="values">
+      <p>Body Font Size <span id="bodySize">xxpx</span></p>
+      <p>Line Height <span id="lineHeight">xxpx</span></p>
+      <p>Content Width <span id="contentWidth">xxpx</span></p>
+      <p>h1 size <span id="h1Size">xxpx</span></p>
+      <p>h2 size <span id="h2Size">xxpx</span></p>
+      <p>h3 size <span id="h3Size">xxpx</span></p>
+    </div>
+
     <div id="styled-text">
       <h1>Proident mlkshk ut affogato</h1>
       <p>Assumenda single-origin coffee mustache, wolf cillum YOLO deep v gochujang marfa pitchfork heirloom drinking vinegar church-key keytar. Taxidermy squid actually qui, ramps microdosing chartreuse sed officia tumblr. Id literally laborum meditation, delectus tote bag next level paleo ramps flexitarian. Franzen est banjo irony waistcoat leggings duis, truffaut marfa vero aesthetic pork belly photo booth. </p>
