Basic highlighting implemented
Not working for headlines at this point, needs some looking into

--- a/PoC/typographie/index.html
+++ b/PoC/typographie/index.html
@@ -78,5 +78,6 @@
 
     <script type="text/javascript" src="scripts/calculate.js"></script>
     <script type="text/javascript" src="scripts/colors.js"></script>
+    <script type="text/javascript" src="scripts/highlight.js"></script>
   </body>
 </html>
