--- a/PoC/typographie/index.html
+++ b/PoC/typographie/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="styles/style.css" media="screen" title="no title" charset="utf-8">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script> TRAIN MODE -->
+    <script src="scripts/jquery-3.1.0.js"></script>
     <script src='node_modules/spectrum-colorpicker/spectrum.js'></script>
     <link rel='stylesheet' href='node_modules/spectrum-colorpicker/spectrum.css' />
 
