Basic manipulating of values implemented
It is possible to amnipulate values in the text as defined in #12.
However, this is only implemented for one value (body text). This commit
is a basic version of the features demanded in #11.

For this to work properly (the values to be changeable seperately), the
calc() function needs to be rewritten, which is a whole ather issue.

--- a/PoC/typographie/index.html
+++ b/PoC/typographie/index.html
@@ -55,7 +55,11 @@
     </p>
 
     <div id="values">
-      <p>Body Font Size <span id="bodySize">xxpx</span></p>
+      <div>
+        <p>Body Font Size <span id="bodySize">xxpx</span></p>
+        <button type="button" name="p-decrease" class="btn-manipulate" data-target="p" data-type="decrease" data-attribute="font-size">-</button>
+        <button type="button" name="p-increase" class="btn-manipulate" data-target="p" data-type="increase" data-attribute="font-size">+</button>
+      </div
       <p>Line Height <span id="lineHeight">xxpx</span></p>
       <p>Content Width <span id="contentWidth">xxpx</span></p>
       <p>h1 size <span id="h1Size">xxpx</span></p>
